WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62658
Constant array literals result in unnecessarily large amounts of code
https://bugs.webkit.org/show_bug.cgi?id=62658
Summary
Constant array literals result in unnecessarily large amounts of code
Oliver Hunt
Reported
2011-06-14 11:56:28 PDT
Constant array literals result in unnecessarily large amounts of code
Attachments
Patch
(15.15 KB, patch)
2011-06-14 11:59 PDT
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2011-06-14 11:59:25 PDT
Created
attachment 97150
[details]
Patch
Gavin Barraclough
Comment 2
2011-06-14 12:07:16 PDT
Comment on
attachment 97150
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=97150&action=review
> Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:1551 > + unsigned checkLength = 0;
This should be #ifndef NDEBUG, or, um, !ASSERT_DISABLED?. Y'know.
Oliver Hunt
Comment 3
2011-06-14 12:10:37 PDT
Committed
r88841
: <
http://trac.webkit.org/changeset/88841
>
Csaba Osztrogonác
Comment 4
2011-06-14 15:05:21 PDT
(In reply to
comment #3
)
> Committed
r88841
: <
http://trac.webkit.org/changeset/88841
>
This patch made many tests crash on many platforms. Could you check it?
Ryosuke Niwa
Comment 5
2011-06-14 15:12:33 PDT
Any update on fix? We might need to rollout this patch for now if we can't land a fix soon because debug test bots are bailing out due to too many crashes.
Ryosuke Niwa
Comment 6
2011-06-14 16:03:39 PDT
Per discussion on IRC, I'm rolling out this patch for now.
Ryosuke Niwa
Comment 7
2011-06-14 16:10:10 PDT
FYI,
http://build.webkit.org/results/Leopard%20Intel%20Debug%20(Tests)/r88857%20(31299)/results.html
http://build.webkit.org/results/SnowLeopard%20Intel%20Debug%20(Tests)/r88853%20(644)/results.html
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r88848%20(30369)/results.html
http://build.webkit.org/results/Windows%207%20Release%20(Tests)/r88848%20(13759)/results.html
http://build.webkit.org/results/GTK%20Linux%2032-bit%20Release/r88851%20(14681)/results.html
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug/r88857%20(23371)/results.html
http://build.webkit.org/results/Qt%20Linux%20Release/r88857%20(34128)/results.html
Oliver Hunt
Comment 8
2011-06-14 16:39:55 PDT
Committed
r88873
: <
http://trac.webkit.org/changeset/88873
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug